[tool.poetry]
name = "mvstudio_kernel"
version = "0.2.0"
authors = ["Baldur van Lew <b.van_lew@lumc.nl>"]
readme = "README.md"
description = 'Python kernel manager for the ManiVaultStudio (mvstudio)'
license = "MIT"
repository = "https://github.com/ManiVaultStudio/JupyterPlugin"
keywords = ["JupyterLab", "kernel", "manager", "data"]
classifiers = [
    "Framework :: Jupyter :: JupyterLab",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering"
]
packages = [
    {include = "mvstudio", from = "."}
]

[tool.poetry.dependencies]
python = "^3.11"
comm ='~=0.2.2'
numpy = '~=1.26'
jupyterlab_server = "~=2.25"
jupyter_server = "~=2.12"
jupyter_client = "~=8.6"
jupyterlab = "~=4.2"
xeus-python-shell = "~0.6"
ipython = "~8.28"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.poetry.plugins."jupyter_client.kernel_provisioners"]
mvstudio-existing-provisioner = "mvstudio.kernel:ExistingProvisioner"