[tool.poetry]
name = "mvstudio_kernel"
version = "0.6.1"
authors = ["Baldur van Lew <b.van_lew@lumc.nl>"]
readme = "README.md"
description = 'Python kernel manager for the ManiVaultStudio (mvstudio)'
license = "MIT"
repository = "https://github.com/ManiVaultStudio/JupyterPlugin"
keywords = ["JupyterLab", "kernel", "manager", "data"]
classifiers = [
    "Framework :: Jupyter :: JupyterLab",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering"
]
packages = [
    {include = "mvstudio", from = "."}
]

[tool.poetry.dependencies]
python = "^3.11"
comm ='>=0.2.2,<1'
numpy = ">=2.2,<3"
jupyterlab_server = ">=2.28,<3"
jupyter_server = ">=2.17,<3"
jupyter_client = ">=8.8,<9"
jupyterlab = ">=4.5.6,<5"
xeus-python-shell = ">=0.6.6,<0.7"
ipython = ">=8.39,<9"
pip = ">=25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.poetry.plugins."jupyter_client.kernel_provisioners"]
mvstudio-existing-provisioner = "mvstudio.kernel:ExistingProvisioner"